--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   }
   
 .titulo-poke{
-    background-color: #2a27af;
+    background-color: #2479da;
     margin-left: 30%;
     margin-bottom: 4%;
     margin-top: 8%;
