--- a/style.css
+++ b/style.css
@@ -6,36 +6,37 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .pokemon-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 2%;
+    padding: 2%; 
 }
 
 .pokemon {
     text-align: center;
     background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 2rem; 
+    padding: 1rem; 
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1); 
 }
 
 .pokemon-btn {
     background-color: #ffcc29; 
     color: #333;
     border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
+    border-radius: 1rem; 
+    padding: 1rem 2rem; 
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1.2rem; 
     font-weight: bold;
     text-transform: uppercase;
     transition: background-color 0.3s, transform 0.3s;
-    margin: 5px; 
+    margin: 1%; 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,7 +44,7 @@ body {
 
 .pokemon-btn:hover {
     background-color: #ffb700; 
-    transform: translateY(-2px);
+    transform: translateY(-2%);
 }
 
 .video-container {
@@ -53,11 +54,13 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-  }
-  
-.titulo-poke{
+        
+}
+
+.titulo-poke {
     background-color: #2479da;
-    margin-left: 30%;
+    margin-left: 35%; 
+    margin-right: 10%; 
     margin-bottom: 4%;
     margin-top: 8%;
     border-radius: 8%;
