--- a/style.css
+++ b/style.css
@@ -34,25 +34,34 @@
     border-radius: 8%;
 }
 
-/* Agrega este CSS a tu archivo style.css o dentro de una etiqueta <style> en el <head> de tu HTML */
 .pokemon {
-    /* Cambia el color del texto en las tarjetas */
-    color: #333; /* Cambia el color a tu elección */
-    /* Cambia la fuente del texto en las tarjetas */
-    font-family: Arial, sans-serif; /* Cambia la fuente a tu elección */
+    color: #333; 
+    font-family: Arial, sans-serif; 
 }
 
-/* Cambia el color del título (nombre del Pokémon) */
+
 .pokemon h3 {
-    color: #ee0707; /* Cambia el color a tu elección */
+    color: #ee0707; 
 }
 
-/* Cambia el color de las etiquetas (por ejemplo, "HP:") */
+
 .pokemon label {
-    color: #f1f1f1; /* Cambia el color a tu elección */
+    color: #f1f1f1; 
 }
 
 .pokemon .save-btn {
     background-color: #00ff80; 
     color: #FFFFFF; 
+}
+.buscadorPokemon {
+    border-radius: 10%;
+    margin-left: 30%;
+    margin-right: 30%;
+    background-image: url(tarjeta.jpg);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.hp-progress,.attack-progress,.defense-progress,.special-attack-progress,.special-defense-progress,.speed-progress{
+    background-color: transparent;
+    
 }
